--- a/app/src/main/res/layout/fragment_start_game.xml
+++ b/app/src/main/res/layout/fragment_start_game.xml
@@ -9,6 +9,7 @@
     android:id="@+id/startGameButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center" />
+    android:layout_centerInParent="true"
+    android:text="@string/start_game_fragment_button_text"/>
 
 </RelativeLayout>
