Add bowler name textView

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -117,9 +117,19 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginStart="24dp"
-    android:text="Target : "
+    android:text="Required Runs : "
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintBaseline_toBaselineOf="@+id/targetTextView"
     app:layout_constraintStart_toEndOf="@+id/targetTextView" />
+
+  <TextView
+    android:id="@+id/bowlerNameTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:text="Bowler Name : "
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+    app:layout_constraintStart_toStartOf="@+id/targetTextView"
+    app:layout_constraintTop_toBottomOf="@+id/targetTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
