Add animation on 1 and 3 runs

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
+  android:id="@+id/motionContainer"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
+  app:layoutDescription="@xml/batsman_animation"
   tools:context=".ui.game.GameFragment">
 
   <ImageView
@@ -141,4 +143,4 @@
     app:layout_constraintStart_toStartOf="@+id/targetTextView"
     app:layout_constraintTop_toBottomOf="@+id/targetTextView" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
