Add half century animation layout

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -143,4 +143,17 @@
     app:layout_constraintStart_toStartOf="@+id/targetTextView"
     app:layout_constraintTop_toBottomOf="@+id/targetTextView" />
 
+  <TextView
+    android:id="@+id/halfCenturyCelebrationTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="8dp"
+    android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+    android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/pitchImageView" />
+
 </androidx.constraintlayout.motion.widget.MotionLayout>
