--- a/app/src/main/res/xml/batsman_animation.xml
+++ b/app/src/main/res/xml/batsman_animation.xml
@@ -3,11 +3,11 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <Transition
-    app:constraintSetEnd="@+id/ending_set"
-    app:constraintSetStart="@+id/starting_set"
+    app:constraintSetStart="@+id/batsmanStartingSet"
+    app:constraintSetEnd="@+id/batsmanEndingSet"
     app:duration="800" />
 
-  <ConstraintSet android:id="@+id/starting_set">
+  <ConstraintSet android:id="@+id/batsmanStartingSet">
 
     <Constraint
       android:id="@id/strikerBatsmanTextView"
@@ -38,7 +38,7 @@
 
   </ConstraintSet>
 
-  <ConstraintSet android:id="@+id/ending_set">
+  <ConstraintSet android:id="@+id/batsmanEndingSet">
 
     <Constraint
       android:id="@id/strikerBatsmanTextView"
