Extract resourcesw fromgame fragment

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -11,8 +11,8 @@
   <ImageView
     android:id="@+id/pitchImageView"
     android:layout_width="match_parent"
-    android:layout_height="400dp"
-    android:layout_marginTop="8dp"
+    android:layout_height="@dimen/game_fragment_pitch_image_view_size"
+    android:layout_marginTop="@dimen/game_fragment_pitch_image_view_margin_top"
     android:src="@drawable/cricket_pitch"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -22,10 +22,10 @@
     android:id="@+id/bowlButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="162dp"
-    android:layout_marginStart="161dp"
-    android:layout_marginTop="8dp"
-    android:text="Bowl"
+    android:layout_marginEnd="@dimen/game_fragment_bowl_button_margin_end"
+    android:layout_marginStart="@dimen/game_fragment_bowl_button_margin_start"
+    android:layout_marginTop="@dimen/game_fragment_bowl_button_margin_top"
+    android:text="@string/game_fragment_bowl_button_text"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/pitchImageView" />
@@ -34,11 +34,11 @@
     android:id="@+id/strikerBatsmanTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="8dp"
-    android:layout_marginTop="56dp"
+    android:layout_marginEnd="@dimen/game_fragment_striker_batsman_text_view_margin_end"
+    android:layout_marginTop="@dimen/game_fragment_striker_batsman_text_view_margin_top"
     android:background="@color/colorAccent"
     android:textAppearance="@style/TextAppearance.AppCompat.Large"
-    android:textColor="#fff"
+    android:textColor="@color/white"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="@+id/pitchImageView" />
@@ -47,11 +47,11 @@
     android:id="@+id/runnerBatsmanTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="56dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="@dimen/game_fragment_runner_batsman_text_view_margin_bottom"
+    android:layout_marginEnd="@dimen/game_fragment_runner_batsman_text_view_margin_end"
     android:background="@color/colorAccent"
     android:textAppearance="@style/TextAppearance.AppCompat.Large"
-    android:textColor="#fff"
+    android:textColor="@color/white"
     app:layout_constraintBottom_toBottomOf="@+id/pitchImageView"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.64"
@@ -59,10 +59,10 @@
 
   <TextView
     android:id="@+id/runsTextView"
-    android:layout_width="70dp"
+    android:layout_width="@dimen/game_fragment_runs_text_view_width"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginRight="8dp"
+    android:layout_marginTop="@dimen/game_fragment_runs_text_view_margin_top"
+    android:layout_marginRight="@dimen/game_fragment_runs_text_view_margin_right"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toStartOf="@+id/wicketsTextView"
     app:layout_constraintHorizontal_bias="0.5"
@@ -74,7 +74,7 @@
     android:id="@+id/wicketsTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="8dp"
+    android:layout_marginLeft="@dimen/game_fragment_wickets_text_margin_left"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintBaseline_toBaselineOf="@id/runsTextView"
     app:layout_constraintEnd_toEndOf="parent"
@@ -85,8 +85,8 @@
     android:id="@+id/strikerScoreTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginRight="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginRight="@dimen/game_fragment_striker_score_text_margin_right"
+    android:layout_marginTop="@dimen/game_fragment_striker_score_text_margin_top"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toStartOf="@+id/runnerScoreTextView"
     app:layout_constraintHorizontal_bias="0.5"
@@ -98,8 +98,8 @@
     android:id="@+id/runnerScoreTextView"
     android:layout_width="65dp"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginLeft="@dimen/game_fragment_runner_score_text_margin_left"
+    android:layout_marginTop="@dimen/game_fragment_runner_score_text_margin_top"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
