Extract resourcesw fromgame fragment

--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -61,8 +61,8 @@
     android:id="@+id/runsTextView"
     android:layout_width="@dimen/game_fragment_runs_text_view_width"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/game_fragment_runs_text_view_margin_top"
     android:layout_marginRight="@dimen/game_fragment_runs_text_view_margin_right"
+    android:layout_marginTop="@dimen/game_fragment_runs_text_view_margin_top"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toStartOf="@+id/wicketsTextView"
     app:layout_constraintHorizontal_bias="0.5"
@@ -110,7 +110,7 @@
     android:id="@+id/currentBallTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="@dimen/game_fragment_current_ball_text_margin_top"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
@@ -121,7 +121,7 @@
     android:id="@+id/oversTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="@dimen/game_fragment_overs_text_margin_top"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
@@ -132,8 +132,8 @@
     android:id="@+id/targetTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginRight="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginRight="@dimen/game_fragment_target_text_margin_right"
+    android:layout_marginTop="@dimen/game_fragment_target_text_margin_top"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toStartOf="@+id/requiredRunsTextView"
     app:layout_constraintHorizontal_bias="0.5"
@@ -145,8 +145,8 @@
     android:id="@+id/requiredRunsTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="8dp"
-    android:layout_marginTop="8dp"
+    android:layout_marginLeft="@dimen/game_fragment_required_runs_text_margin_left"
+    android:layout_marginTop="@dimen/game_fragment_required_runs_text_margin_top"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
@@ -157,7 +157,7 @@
     android:id="@+id/bowlerNameTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="@dimen/game_fragment_bowler_name_text_margin_top"
     android:textAppearance="@style/TextAppearance.AppCompat.Medium"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.5"
@@ -168,8 +168,8 @@
     android:id="@+id/halfCenturyCelebrationTextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
-    android:layout_marginStart="8dp"
+    android:layout_marginBottom="@dimen/game_fragment_half_century_celebrations_text_margin_bottom"
+    android:layout_marginStart="@dimen/game_fragment_half_century_celebrations_text_margin_start"
     android:textAppearance="@style/TextAppearance.AppCompat.Display3"
     android:visibility="gone"
     app:layout_constraintBottom_toBottomOf="parent"
