--- a/app/src/main/res/xml/batsman_animation.xml
+++ b/app/src/main/res/xml/batsman_animation.xml
@@ -13,11 +13,11 @@
       android:id="@id/strikerBatsmanTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
-      android:layout_marginTop="56dp"
+      android:layout_marginEnd="@dimen/game_fragment_striker_batsman_text_view_margin_end"
+      android:layout_marginTop="@dimen/game_fragment_striker_batsman_text_view_margin_top"
       android:background="@color/colorAccent"
       android:textAppearance="@style/TextAppearance.AppCompat.Large"
-      android:textColor="#fff"
+      android:textColor="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/pitchImageView" />
@@ -26,11 +26,11 @@
       android:id="@id/runnerBatsmanTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="56dp"
-      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="@dimen/game_fragment_runner_batsman_text_view_margin_bottom"
+      android:layout_marginEnd="@dimen/game_fragment_runner_batsman_text_view_margin_end"
       android:background="@color/colorAccent"
       android:textAppearance="@style/TextAppearance.AppCompat.Large"
-      android:textColor="#fff"
+      android:textColor="@color/white"
       app:layout_constraintBottom_toBottomOf="@+id/pitchImageView"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.64"
@@ -44,11 +44,11 @@
       android:id="@id/strikerBatsmanTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="56dp"
-      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="@dimen/game_fragment_runner_batsman_text_view_margin_bottom"
+      android:layout_marginEnd="@dimen/game_fragment_runner_batsman_text_view_margin_end"
       android:background="@color/colorAccent"
       android:textAppearance="@style/TextAppearance.AppCompat.Large"
-      android:textColor="#fff"
+      android:textColor="@color/white"
       app:layout_constraintBottom_toBottomOf="@+id/pitchImageView"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.64"
@@ -58,11 +58,11 @@
       android:id="@id/runnerBatsmanTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginEnd="8dp"
-      android:layout_marginTop="56dp"
+      android:layout_marginEnd="@dimen/game_fragment_striker_batsman_text_view_margin_end"
+      android:layout_marginTop="@dimen/game_fragment_striker_batsman_text_view_margin_top"
       android:background="@color/colorAccent"
       android:textAppearance="@style/TextAppearance.AppCompat.Large"
-      android:textColor="#fff"
+      android:textColor="@color/white"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="@+id/pitchImageView" />
