--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,8 +13,10 @@
   <dimen name="game_fragment_runs_text_view_margin_top">8dp</dimen>
   <dimen name="game_fragment_runs_text_view_margin_right">8dp</dimen>
   <dimen name="game_fragment_wickets_text_margin_left">8dp</dimen>
+  <dimen name="game_fragment_striker_score_text_width">65dp</dimen>
   <dimen name="game_fragment_striker_score_text_margin_right">8dp</dimen>
   <dimen name="game_fragment_striker_score_text_margin_top">8dp</dimen>
+  <dimen name="game_fragment_runner_score_text_width">65dp</dimen>
   <dimen name="game_fragment_runner_score_text_margin_left">8dp</dimen>
   <dimen name="game_fragment_runner_score_text_margin_top">8dp</dimen>
   <dimen name="game_fragment_current_ball_text_margin_top">8dp</dimen>
